<resources>

    <string name="app_name">LayoutTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <string name="button_label_0">Button#0</string>
    <string name="button_label_1">Button#1</string>
    <string name="button_label_2">Button#2</string>
    
    
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="username_hint">Insert Username</string>
    <string name="password_hint">Insert Password</string>
    
    
    <string name="to_blue_button">To Blue</string>
    <string name="to_green_button">To Green</string>

</resources>